Implemented shared and 3DTouch peek-pop behavior.

--- a/TSAFlickrFeedImageGallery/Info.plist
+++ b/TSAFlickrFeedImageGallery/Info.plist
@@ -20,6 +20,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App will need access to photo library to save the image if user wishes to.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
